# ZJU-OCCS

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  agent.md  environment.yml  package-lock.json  pyproject.toml
.github/workflows/: pylint.yml
OCCS/: __init__.py  cli.py
OCCS/connector/: __init__.py  mock_hardware.py  real_hardware.py
OCCS/data/: ideal_waveform.csv  ideal_waveform1.csv  ideal_wavefront2.csv
OCCS/optimizer/: estimator.py  objective.py  optimizer.py  utils.py  viz.py
OCCS/service/: __init__.py  app.py  hardware.py  models.py  session.py
OCCS/simulate/: __init__.py  model.py
OCCS/webui/: index.html  package-lock.json  package.json  vite.config.ts
bayes_optimization/: README.md  data_rows.csv  data_rows.xlsx  requirements.txt
bayes_optimization/bayes_optimizer/: __init__.py  acquisition.py  calibrator.py  config.py  models.py  optimizer.py  spsa.py
bayes_optimization/scripts/: quick_scan.py  run_optimization.py
bayes_optimization/tests/: conftest.py  test_calibrator.py  test_models.py  test_optimizer.py  test_placeholder.py  test_simulate.py  test_ui.py
code/: test.ipynb
docs/: README.en.md  README.zh-CN.md  RELEASE.md
examples/: run_evolution.py  run_sgd.py
opt_sim/: __init__.py  components.py  optimization.py  reference.py  simulation.py
scripts/: gen_ideal_wavefront2.py
tests/: conftest.py  test_cli_web.py  test_components.py  test_mock_hardware.py  test_objective.py  test_optimizer.py  test_service_app.py  test_service_hardware.py  test_service_history_csv.py  test_service_models.py  test_service_rest_ws.py  test_service_session.py  test_service_upload_target.py  test_service_voltages_bounds.py  test_simulate_noise.py  test_webui_scaffold.py
(+37 files in other folders)
